<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client_MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/picture"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#2196F3"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/text_cmenu"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_fshare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="#FFFFFF"
                android:text="@string/btn_fshare"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_fadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:text="@string/btn_fadd"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_fmanage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:text="@string/btn_fmanage"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_fview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:text="@string/btn_fview"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_msgboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:text="@string/btn_msgboard"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>