<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manage_DevActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_mdview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_mdview"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_mdshared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_mdshared"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_shareddev"
            android:layout_width="match_parent"
            android:layout_height="248dp">

        </ListView>

        <TextView
            android:id="@+id/text_mdadded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_mdadded"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_addeddev"
            android:layout_width="match_parent"
            android:layout_height="246dp" />
    </LinearLayout>
</RelativeLayout>