<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_DevActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/picture"
        android:contentDescription="@string/todo"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_caddtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_adview"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_fresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_weight="1"
                android:text="@string/btn_fresh"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_adddev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</RelativeLayout>