<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Reply_Msg">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/picture"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_msgfrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/text_msgdata"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:singleLine="false"
            android:ellipsize="none"
            android:maxLines="5"
            android:inputType="textMultiLine"
            android:text="TextView" />

        <EditText
            android:id="@+id/edit_msgreply"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_rmback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_weight="1"
                android:text="@string/btn_reply"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>